# hack_archive_server

./: .gitignore  Cargo.toml  example-secrets.json  flake.nix  oldmain.rs  todo.org
.github/: dependabot.yml
.github/workflows/: check.yml  update.yml
database/: Cargo.toml
database/src/: client.rs  field_with_time.rs  lib.rs  model.rs  mongodriver.rs  structure.rs
database/src/model/: majority_token.rs  mod.rs
databasecouch/: Cargo.toml
databasecouch/src/: client.rs  field_with_time.rs  lib.rs  main.rs  model.rs  utility.rs
locales/: core.ftl
locales/en/: main.ftl
locales/fr/: main.ftl
server/: Cargo.toml  style.css
server/src/: app_data.rs  common.rs  css.rs  extension.rs  file.rs  fileref.rs  hack.rs  index.rs  lib.rs  main.rs  message.rs  tagged.rs
server/src/extractor/: mod.rs  request_data.rs  user_data.rs
server/src/pages/: connect_majority_token.rs  create_majority_token.rs  css.rs  decompress.rs  disconnect_majority_token.rs  file.rs  hack.rs  index.rs  majority.rs  mod.rs  reload_storage.rs  tagged.rs
server/src/pages/hackindex/: index_hack.rs  index_hacks.rs  index_root.rs  index_taginfo.rs  mod.rs
src/: html.rs  lib.rs  main.rs  request_data.rs
src/storage/: filter.rs  hack.rs  mod.rs  query.rs  storage.rs  tags.rs
src/view/: change_filter.rs  main_page.rs  mod.rs  search.rs  set_filter.rs
storage/: Cargo.toml
storage/src/: hack.rs  lib.rs  query.rs  storage.rs  taginfo.rs  tags.rs
