[package]
name = "pmd_hack_archive_server"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
rocket = "=0.4.5"
maud = { version = "0.22.2", features = ["rocket"] }
anyhow = "=1.0.26"
