[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
couch_rs = "0.8.37"
tokio = { version = "1.18.0", features = ["full"] }
http = "0.2.7"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.16"
serde_json = "1.0.80"
uuid = { version = "1.0.0", features = ["v4", "serde"] }