[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
couch_rs = "0.8.39"
tokio = { version = "1.20.1", features = ["full"] }
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4", "serde"] }