[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
maud = "0.26.0"
clap = { version="4.1.4", features=["derive"] }
#TODO: get rid of this safe_join
safe_join = { git = "https://github.com/marius851000/safe_join_mirror.git", rev="3f541a0222685f45b816a80664bb84ed825b93df"}
comrak = "0.20.0"
pmd_hack_storage = { path = "../storage" }
qstring = "0.7.2"
database = { path = "../database" }
tokio = { version = "1.20.1", features = ["full"] }
mime = "0.3.16"
log = "0.4.17"
env_logger = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
url = "2.2.2"
fluent-templates = "0.8.0"
unic-langid = { version = "0.9.0", features = ["macros"] }
map-macro = "0.2.1"
zip = "0.6.3"
fluent-bundle = "0.15.2"
arc-swap = "1.6.0"
display-error-chain = "0.2.0"
