[package]
name = "pmd_hack_storage"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.17"